Implementando dados da compra e opções de pagamento

--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -39,6 +39,7 @@
 
             <div class="box-element hidden" id="payment-info">
                 <small>Paypay Options</small>
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
         <div class="col-lg-6">
@@ -60,6 +61,30 @@
             </div>
 
         </div>
-
     </div>
+
+<script type="text/javascript">
+    var shipping = "{{order.shipping}}"
+
+    if(shipping == "False"){
+        document.getElementById("shipping-info").innerHTML = ""
+    }
+
+    var form = document.getElementById("form")
+    form.addEventListener("submit", function(e){
+        e.preventDefault()
+        console.log("form submitted...")
+        document.getElementById("form-button").classList.add("hidden");
+        document.getElementById("payment-info").classList.remove("hidden");
+    })
+
+    document.getElementById("make-payment").addEventListener("click", function(e){
+        submitFormData()
+    })    
+
+    function submitFormData(){
+        console.log("Payment button clicked")
+    }
+</script>
+
 {% endblock content %}
