Adicionando lógica de checkout para convidados, limpeza de carrinho após a compra e otimização na visualização do processOrder

--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -83,8 +83,8 @@
     }
 
     var form = document.getElementById("form")
-    csrftoken = form.getElementByTagName("imput")[0]form.city.value
-    console.log("Newtoken:", form.getElementByTagName("input")[0].value)
+    csrftoken = form.getElementsByTagName("input")[0].value;
+    console.log("Newtoken:", form.getElementsByTagName("input")[0].value)
 
     form.addEventListener("submit", function(e){
         e.preventDefault()
@@ -137,11 +137,12 @@
         .then((data) => {
             console.log("Success:", data);
             alert("Transaction completed");
+
+            cart = {}
+            document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/"
+
             window.location.href = "{% url "store" %}"
         })
-    
-        console.log("shipping Info:", shippingInfo)
-        console.log("User Info:", userFormData)
     }
     
 </script>
