--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -30,7 +30,7 @@
                 <div class="cart-row" >
                     <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}" alt=""></div>
                     <div style="flex:2"><p>{{item.product.name}}</p></div>
-                    <div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
+                    <div style="flex:1"><p>R${{item.product.price|floatformat:2}}</p></div>
                     <div style="flex:1">
                         <p class="quantity">x{{item.quantity}}</p>
                         <div class="quantity">
@@ -39,7 +39,7 @@
                             <img data-product="{{item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'images/arrow-down.png' %}">
                         </div>
                     </div>
-                    <div style="flex:1"><p>${{item.get_total}}</p></div>
+                    <div style="flex:1"><p>R${{item.get_total}}</p></div>
                 </div>
                 {% endfor %}
             </div>
