--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-	<title>Ecom</title>
+	<title>Dazzle</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
@@ -64,22 +64,24 @@
 			</li>
 	   
 		  </ul>
-		  <div class="input-container">
-			<input type="text" name="text" class="input" placeholder="O que você está procurando?">
-			<span class="icon"> 
-				<svg width="19px" height="19px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-					<g id="SVGRepo_iconCarrier"> 
-						<path opacity="1" d="M14 5H20" stroke="#3d0099" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> 
-						<path opacity="1" d="M14 8H17" stroke="#3d0099" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> 
-						<path d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2" stroke="#3d0099" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path> 
-						<path opacity="1" d="M22 22L20 20" stroke="#3d0099" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"></path> 
-					</g>
-				</svg>
-			</span>
-			
-		  </div>		  
+		<div class="input-container">
+		    <form action="{% url 'search_results' %}" method="get" style="display: flex; justify-content: center;">
+					<input type="text" name="search" class="input" placeholder="O que você está procurando?">
+					<span class="icon"> 
+						<svg width="19px" height="19px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+							<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+							<g id="SVGRepo_iconCarrier"> 
+								<path opacity="1" d="M14 5H20" stroke="#3d0099" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> 
+								<path opacity="1" d="M14 8H17" stroke="#3d0099" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> 
+								<path d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2" stroke="#3d0099" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path> 
+								<path opacity="1" d="M22 22L20 20" stroke="#3d0099" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"></path> 
+							</g>
+						</svg>
+					</span>			
+		    </form>
+		</div>
+				  
 			
 		  
 		  <div class="form-inline my-2 my-lg-0">
