--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -12,7 +12,7 @@
                         <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
                         <th><h5>Total: <strong>${{order.get_cart_total|floatformat:2}}</strong></h5></th>
                         <th>
-                            <a style="float: right; margin 5px;" class="btn btn-success" href="{% url "checkout" %}">Checkout</a>
+                            <a id="checkout-button" style="float: right; margin 5px;" class="btn btn-success" href="{% url "checkout" %}">Checkout</a>
                         </th>
                     </tr>
                 </table>
@@ -45,4 +45,12 @@
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById('checkout-button').addEventListener('click', function(event) {
+            {% if not request.user.is_authenticated %}
+                event.preventDefault();
+                window.location.href = "{% url 'login' %}";
+            {% endif %}
+        });
+    </script>       
 {% endblock content %}
