--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -6,15 +6,6 @@
             <div class="box-element" id="form-wrapper">
                 <form id="form">
                     {% csrf_token %}
-                    <div id="user-info">
-                        <div class="form-field">
-                            <input required class="form-control" type="text" name="name" placeholder="Name..">
-                        </div>
-                        <div class="form-field">
-                            <input required class="form-control" type="email" name="email" placeholder="Email..">
-                        </div>
-                    </div>
-                    
                     <div id="shipping-info">
                         <hr>
                         <p>Shipping Information:</p>
@@ -64,87 +55,86 @@
         </div>
     </div>
 
-<script type="text/javascript">
-    var shipping = "{{order.shipping}}"
-    var total = "{{order.get_cart_total}}"
-
-    if(shipping == "False"){
-        document.getElementById("shipping-info").innerHTML = ""
-    }
-
-    if (user != "AnonymousUser"){
-        document.getElementById("user-info").innerHTML = ""
-    }
-
-    if (shipping == "False" && user != "AnonymousUser"){
-        document.getElementById("form-wrapper").classList.add("hidden");
-        document.getElementById("payment-info").classList.remove("hidden");
-
-    }
-
-    var form = document.getElementById("form")
-    csrftoken = form.getElementsByTagName("input")[0].value;
-    console.log("Newtoken:", form.getElementsByTagName("input")[0].value)
-
-    form.addEventListener("submit", function(e){
-        e.preventDefault()
-        console.log("form submitted...")
-        document.getElementById("form-button").classList.add("hidden");
-        document.getElementById("payment-info").classList.remove("hidden");
-    })
-
-    document.getElementById("make-payment").addEventListener("click", function(e){
-        submitFormData()
-    })    
-
-    function submitFormData(){
-        console.log("Payment button clicked")
+    <script type="text/javascript">
+        var shipping = "{{order.shipping}}"
+        var total = "{{order.get_cart_total}}"
+        var user = "{{request.user}}"
+        var cartItems = "{{order.get_cart_items}}"
     
-        var userFormData = {
-            "name":null,
-            "email":null,
-            "total":total,
+        if(shipping == "False"){
+            document.getElementById("shipping-info").innerHTML = ""
         }
     
-        var shippingInfo = {
-            "address":null,
-            "city":null,
-            "state":null,
-            "zipcode":null,
+        if (cartItems > 0) {
+            document.getElementById("form-button").classList.remove("hidden");
+            if (shipping == "False" && user != "AnonymousUser"){
+                document.getElementById("form-wrapper").classList.add("hidden");
+                document.getElementById("payment-info").classList.remove("hidden");
+            }
+        } else {
+            document.getElementById("form-button").classList.add("hidden");
+            document.getElementById("payment-info").classList.add("hidden");
         }
     
-        if (shipping != "False"){
-            shippingInfo.address = form.address.value
-            shippingInfo.city = form.city.value
-            shippingInfo.state = form.state.value
-            shippingInfo.zipcode = form.zipcode.value
-        }
-        if (user == "AnonymousUser"){
-            userFormData.name = form.name.value
-            userFormData.email = form.email.value
-        }
+        var form = document.getElementById("form")
+        csrftoken = form.getElementsByTagName("input")[0].value;
     
-        var url = "/process_order/"
-        fetch(url,{
-            method: "POST",
-            headers:{
-                "Content-Type":"application/json",
-                "X-CSRFToken":csrftoken,
-            },
-            body:JSON.stringify({"form":userFormData,"shipping":shippingInfo}),
+        form.addEventListener("submit", function(e){
+            e.preventDefault()
+            if (cartItems > 0) {
+                document.getElementById("form-button").classList.add("hidden");
+                document.getElementById("payment-info").classList.remove("hidden");
+            }
         })
-        .then((response) => response.json())
-        .then((data) => {
-            console.log("Success:", data);
-            alert("Transaction completed");
-
-            cart = {}
-            document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/"
-
-            window.location.href = "{% url "store" %}"
-        })
-    }
     
-</script>
-
+        document.getElementById("make-payment").addEventListener("click", function(e){
+            submitFormData()
+        })    
+    
+        function submitFormData(){
+            var userFormData = {
+                "name":null,
+                "email":null,
+                "total":total,
+            }
+        
+            var shippingInfo = {
+                "address":null,
+                "city":null,
+                "state":null,
+                "zipcode":null,
+            }
+        
+            if (shipping != "False"){
+                shippingInfo.address = form.address.value
+                shippingInfo.city = form.city.value
+                shippingInfo.state = form.state.value
+                shippingInfo.zipcode = form.zipcode.value
+            }
+            if (user == "AnonymousUser"){
+                userFormData.name = form.name.value
+                userFormData.email = form.email.value
+            }
+        
+            var url = "/process_order/"
+            fetch(url,{
+                method: "POST",
+                headers:{
+                    "Content-Type":"application/json",
+                    "X-CSRFToken":csrftoken,
+                },
+                body:JSON.stringify({"form":userFormData,"shipping":shippingInfo}),
+            })
+            .then((response) => response.json())
+            .then((data) => {
+                alert("Transaction completed");
+    
+                cart = {}
+                document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/"
+    
+                window.location.href = "{% url "store" %}"
+            })
+        }
+    </script>
+    
 {% endblock content %}
