Corrigindo o problema de estilo do botão dropdown após ativado

--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -1,74 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400&family=Playpen+Sans&display=swap');
 
-body{
-	background-color: hsl(0, 0%, 98%);
-	font-family: "Jost", sans-serif;
+body {
+    background-color: hsl(0, 0%, 98%);
+    font-family: "Jost", sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6{
-	color:hsl(0, 0%, 30%);
+h1, h2, h3, h4, h5, h6 {
+    color: hsl(0, 0%, 30%);
 }
 
-.box-element{
-	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
-	background-color: #fff;
-	border-radius: 4px;
-	padding: 10px;
+.box-element {
+    box-shadow: hsl(0, 0%, 80%) 0 0 16px;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 10px;
 }
 
-.thumbnail{
-	width: 100%;
-	height: 200px;
-	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+.thumbnail {
+    width: 100%;
+    height: 200px;
+    -webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+    -moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+    box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 }
 
-.product{
-	border-radius: 0 0 4px 4px;
+.product {
+    border-radius: 0 0 4px 4px;
 }
 
-.bg-dark{
-	background-color: #4D00E6!important;
+.bg-dark {
+    background-color: #4D00E6 !important;
 }
 
-#cart-icon{
-	width:28px;
-	display: inline-block;
-	margin-left: 15px;
+#cart-icon {
+    width: 28px;
+    display: inline-block;
+    margin-left: 15px;
 }
 
-#cart-total{
-	display: block;
-	text-align: center;
-	color:#fff;
-	background-color: red;
-	width: 20px;
-	height: 21px;
-	border-radius: 50%;
-	font-size: 14px;
+#cart-total {
+    display: block;
+    text-align: center;
+    color: #fff;
+    background-color: red;
+    width: 20px;
+    height: 21px;
+    border-radius: 50%;
+    font-size: 14px;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
-	margin-top: 10px;
+.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12 {
+    margin-top: 10px;
 }
 
-.btn{
-	border-radius: 0;
+.btn {
+    border-radius: 0;
 }
 
-.row-image{
-	width: 100px;
+.row-image {
+    width: 100px;
 }
 
-.form-field{
-	width:250px;
-	display: inline-block;
-	padding: 5px;
+.form-field {
+    width: 250px;
+    display: inline-block;
+    padding: 5px;
 }
 
-.cart-row{
-	display: flex;
+.cart-row {
+    display: flex;
     align-items: flex-stretch;
     padding-bottom: 10px;
     margin-bottom: 10px;
@@ -76,36 +76,36 @@ h1,h2,h3,h4,h5,h6{
 
 }
 
-.quantity{
-	display: inline-block;
-	font-weight: 700;
-	padding-right:10px;
-	
+.quantity {
+    display: inline-block;
+    font-weight: 700;
+    padding-right: 10px;
+
 
 }
 
-.chg-quantity{
-	width: 12px;
-	cursor: pointer;
-	display: block;
-	margin-top: 5px;
-	transition:.1s;
+.chg-quantity {
+    width: 12px;
+    cursor: pointer;
+    display: block;
+    margin-top: 5px;
+    transition: .1s;
 }
 
-.chg-quantity:hover{
-	opacity: .6;
+.chg-quantity:hover {
+    opacity: .6;
 }
 
 
-.hidden{
-	display: none!important;
+.hidden {
+    display: none !important;
 }
 
 .btn-warning {
     color: #fff;
     background-color: transparent;
     border-color: transparent;
-	font-size: 18px;
+    font-size: 18px;
 }
 
 .btn-warning:hover {
@@ -121,11 +121,22 @@ h1,h2,h3,h4,h5,h6{
     box-shadow: none !important;
 }
 
+#dropdownMenuButton.btn.btn-warning.dropdown-toggle {
+    color: #fff;
+    background-color: transparent;
+    border-color: transparent;
+    font-size: 18px;
+}
+#dropdownMenuButton.btn.btn-warning.dropdown-toggle:hover{
+    color: #3d0099;
+    background-color: transparent;
+    border-color: transparent;
+}
 
 .navbar {
     height: 70px;
-    padding-left: 75px; 
-	padding-right: 75px;
+    padding-left: 75px;
+    padding-right: 75px;
 }
 
 .btn-warning img {
@@ -134,29 +145,30 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .input-container {
-	width: 600px;
-	position: relative;
-	margin: 0 auto; 
-  }
-  
-  .icon {
-	position: absolute;
-	right: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-	fill: #4D00E6;
-  }
-  
-  .input {
-	width: 100%;
-	height: 43px;
-	padding: 10px 40px 10px 10px; 
-	transition: .2s linear;
-	border: 2.5px solid #4D00E6;
-	font-size: 14px;
-	border-radius: 25px;
-  }
-  .input:focus {
+    width: 600px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #4D00E6;
+}
+
+.input {
+    width: 100%;
+    height: 43px;
+    padding: 10px 40px 10px 10px;
+    transition: .2s linear;
+    border: 2.5px solid #4D00E6;
+    font-size: 14px;
+    border-radius: 25px;
+}
+
+.input:focus {
     outline: none !important;
     box-shadow: none !important;
 }
@@ -165,8 +177,8 @@ h1,h2,h3,h4,h5,h6{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-	margin-top: 5%;
-	gap: 5%;
+    margin-top: 5%;
+    gap: 5%;
 }
 
 .product-image {
@@ -178,14 +190,14 @@ h1,h2,h3,h4,h5,h6{
     flex: 1;
 }
 
-  .container {
+.container {
     display: block;
     position: relative;
     cursor: pointer;
     font-size: 20px;
     user-select: none;
     transition: 100ms;
-	margin-top: 2%;
+    margin-top: 2%;
 }
 
 .checkmark {
@@ -198,12 +210,12 @@ h1,h2,h3,h4,h5,h6{
     animation: dislike_effect 400ms ease;
 }
 
-.container input:checked ~ .checkmark path {
+.container input:checked~.checkmark path {
     fill: #FF5353;
     stroke-width: 0;
 }
 
-.container input ~ .checkmark path {
+.container input~.checkmark path {
     fill: none;
     stroke-width: 20px;
 }
@@ -216,6 +228,7 @@ h1,h2,h3,h4,h5,h6{
     border-radius: 50%;
     display: inline-block;
 }
+
 .button-container {
     display: flex;
     align-items: center;
