--- a/ecommerce/store/templates/store/login.html
+++ b/ecommerce/store/templates/store/login.html
@@ -5,12 +5,12 @@
   {% csrf_token %}
   <div class="form-group">
     <label for="username">Nome de usuário:</label>
-    <input required class="form-control input" type="text" id="username" name="username" autocomplete="username">
+    <input required class="form-control" type="text" id="username" name="username" autocomplete="username">
   </div>
 
   <div class="form-group">
     <label for="password">Senha:</label>
-    <input required class="form-control input" type="password" id="password" name="password" autocomplete="current-password">
+    <input required class="form-control" type="password" id="password" name="password" autocomplete="current-password">
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
