--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -5,7 +5,12 @@ body {
     font-family: "Jost", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: hsl(0, 0%, 30%);
 }
 
@@ -49,7 +54,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 14px;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12 {
+.col-lg-4,
+.col-lg-6,
+.col-lg-8,
+.col-lg-12 {
     margin-top: 10px;
 }
 
@@ -127,7 +135,8 @@ h1, h2, h3, h4, h5, h6 {
     border-color: transparent;
     font-size: 18px;
 }
-#dropdownMenuButton.btn.btn-warning.dropdown-toggle:hover{
+
+#dropdownMenuButton.btn.btn-warning.dropdown-toggle:hover {
     color: #3d0099;
     background-color: transparent;
     border-color: transparent;
@@ -233,4 +242,62 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.prod-radio-tile-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.prod-radio-tile-group .prod-input-container {
+    position: relative;
+    height: 25px;
+    width: 25px;
+    margin: 0.5rem;
+}
+
+.prod-radio-tile-group .prod-input-container .prod-radio-button {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    cursor: pointer;
+}
+
+.prod-radio-tile-group .prod-input-container .prod-radio-tile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #9283F1;
+    border-radius: 5px;
+    padding: 1rem;
+    transition: transform 300ms ease;
+}
+
+.prod-radio-tile-group .prod-input-container .prod-radio-tile-label {
+    text-align: center;
+    font-size: 0.75rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #9283F1;
+    margin: 10px;
+}
+
+.prod-radio-tile-group .prod-input-container .prod-radio-button:checked+.prod-radio-tile {
+    background-color: #9283F1;
+    border: 2px solid #9283F1;
+    color: white;
+    transform: scale(1.1, 1.1);
+}
+
+.prod-radio-tile-group .prod-input-container .prod-radio-button:checked+.prod-radio-tile .prod-radio-tile-label {
+    color: white;
+    background-color: #9283F1;
 }
