--- a/ecommerce/store/templates/store/product_detail.html
+++ b/ecommerce/store/templates/store/product_detail.html
@@ -6,13 +6,14 @@
     </div>
     <div class="product-info">
         <h1>{{ product.name }}</h1>
+        <hr>
         <h2>R$ {{ product.price }}</h2>
         <hr>
         <div class="button-container">
             {% for tamanho in product.tamanhoproduto_set.all %}
                 <div class="prod-radio-tile-group">
                     <div class="prod-input-container">
-                        <input id="size-{{ tamanho.id }}" class="prod-radio-button" type="radio" name="size">
+                        <input id="size-{{ tamanho.id }}" class="prod-radio-button" type="radio" name="size" value="{{ tamanho.tamanho }}">
                         <div class="prod-radio-tile">
                             <label for="size-{{ tamanho.id }}" class="prod-radio-tile-label">{{ tamanho.tamanho }}</label>
                         </div>
