Resolvendo problema ao apagar um user e implementando lógica de adicionar itens dos cookies ao carrinho do user quando ele cria um conta

--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -49,8 +49,8 @@
         document.getElementById('checkout-button').addEventListener('click', function(event) {
             {% if not request.user.is_authenticated %}
                 event.preventDefault();
-                window.location.href = "{% url 'login' %}";
+                window.location.href = "{% url 'register' %}";
             {% endif %}
-        });
+        });        
     </script>       
 {% endblock content %}
