--- a/ecommerce/store/templates/store/register.html
+++ b/ecommerce/store/templates/store/register.html
@@ -1,7 +1,7 @@
 {% extends "store/main.html" %}
 {% block content %}
 <h2>Cadastro</h2>
-<form method="POST">
+<form method="POST" id="registerForm">
     {% csrf_token %}
     <div class="form-group">
       <label for="username">Nome de usuário:</label>
@@ -15,6 +15,24 @@
       <label for="password">Senha:</label>
       <input required class="form-control" type="password" id="password" name="password" required>
     </div>
+    <div class="form-group">
+      <label for="confirmPassword">Confirme a Senha:</label>
+      <input required class="form-control" type="password" id="confirmPassword" required>
+    </div>
     <button type="submit" class="btn btn-primary">Cadastro</button>
   </form>  
+
+<script>
+  document.getElementById('registerForm').addEventListener('submit', function(event) {
+      var password = document.getElementById('password').value;
+      var confirmPassword = document.getElementById('confirmPassword').value;
+
+      if (password !== confirmPassword) {
+          event.preventDefault();
+          alert('As senhas não correspondem!');
+      }
+  });
+</script>
+
 {% endblock %}
+
