--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -410,3 +410,38 @@ h6 {
     height: 100vh;
     margin-top: -70px;
 }
+
+header {
+	padding: 5px 0;
+	background: #ffffff;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.link {
+    margin-right: 17px;
+    margin-left: 17px;
+    font-size: 17px;
+    text-decoration: none;
+    color: #3d0099;
+    border-bottom: 2px solid transparent;
+}
+
+.link:hover {
+    color: #000;
+    border-bottom: 2px solid #3d0099;
+}
+
+.link:link, .link:visited {
+    color: #3d0099;
+    text-decoration: none;
+}
+
+.link:hover, .link:active {
+    color: #3d0099;
+    text-decoration: none;
+}
