--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -92,7 +92,7 @@
 				  {% if request.user.is_authenticated %}
 					{{ request.user.username }}
 				  {% else %}
-					Login
+					Entrar
 				  {% endif %}
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -113,6 +113,17 @@
 		  </div>
 		</div>
 	  </nav>
+	<header>
+		<div class="box">
+		  <a href="#" class="link">COLEÇÃO</a>
+		  <a href="#" class="link">CORRIDA</a>
+		  <a href="#" class="link">ESPORTES</a>
+		  <a href="#" class="link">FUTEBOL</a>
+		  <a href="#" class="link">PROMOÇÕES</a>
+		  <a href="#" class="link">LANÇAMENTOS</a>
+		  <a href="#" class="link">CUPONS</a>
+		</div>
+	</header>
     
     <div class="container">
         {% block content %}
