Adicionando funcão de filtrar produtos por categoria no header

--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -115,13 +115,13 @@
 	  </nav>
 	<header>
 		<div class="box">
-		  <a href="#" class="link">COLEÇÃO</a>
-		  <a href="#" class="link">CORRIDA</a>
-		  <a href="#" class="link">ESPORTES</a>
-		  <a href="#" class="link">FUTEBOL</a>
-		  <a href="#" class="link">PROMOÇÕES</a>
-		  <a href="#" class="link">LANÇAMENTOS</a>
-		  <a href="#" class="link">CUPONS</a>
+			<a href="{% url 'products' 'colecao' %}" class="link">COLEÇÃO</a>
+			<a href="{% url 'products' 'corrida' %}" class="link">CORRIDA</a>
+			<a href="{% url 'products' 'esportes' %}" class="link">ESPORTES</a>
+			<a href="#" class="link">FUTEBOL</a>
+			<a href="#" class="link">PROMOÇÕES</a>
+			<a href="#" class="link">LANÇAMENTOS</a>
+			<a href="#" class="link">CUPONS</a>
 		</div>
 	</header>
     
