--- a/ecommerce/store/templates/store/product_detail.html
+++ b/ecommerce/store/templates/store/product_detail.html
@@ -1,5 +1,39 @@
 {% extends "store/main.html" %}
 {% block content %}
+<style>
+    .container-heart input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+    }
+    
+    .container-heart {
+        display: block;
+        position: relative;
+        cursor: pointer;
+        user-select: none;
+    }
+    
+    .container-heart svg {
+        position: relative;
+        top: 0;
+        left: 15px;
+        height: 30px;
+        width: 30px;
+        transition: all 0.3s;
+        fill: #666;
+    }
+    
+    .container-heart svg:hover {
+        transform: scale(1.1);
+    }
+    
+    .container-heart input:checked~svg {
+        fill: #E3474F;
+    }
+</style>
 <div class="product-detail-container">
     <div class="product-image">
         <img src="{{ product.imageURL }}" alt="{{ product.name }}">
@@ -26,7 +60,17 @@
         <hr>
         <div class="button-container">
             <button id="add-to-cart-button" data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart" disabled>Adicionar ao carrinho</button>
-        </div>              
+            <form method="post" action="{% url 'update_favoritos' %}" id="favoriteForm">
+                {% csrf_token %}
+                <input type="hidden" name="product_id" value="{{ product.id }}">
+                <label class="container-heart">
+                    <input type="checkbox" class="favorite-checkbox" onchange="document.getElementById('favoriteForm').submit();" {% if product in favoritos %}checked{% endif %}>
+                    <svg id="Layer_1" version="1.0" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M16.4,4C14.6,4,13,4.9,12,6.3C11,4.9,9.4,4,7.6,4C4.5,4,2,6.5,2,9.6C2,14,12,22,12,22s10-8,10-12.4C22,6.5,19.5,4,16.4,4z"></path></svg>
+                </label>
+            </form>
+
+ 
+        </div>             
     </div>
 </div>
 <script>
