--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -412,8 +412,8 @@ h6 {
 }
 
 header {
-	padding: 5px 0;
-	background: #ffffff;
+    padding: 5px 0;
+    background: #ffffff;
     box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
@@ -437,12 +437,14 @@ header {
     border-bottom: 2px solid #3d0099;
 }
 
-.link:link, .link:visited {
+.link:link,
+.link:visited {
     color: #3d0099;
     text-decoration: none;
 }
 
-.link:hover, .link:active {
+.link:hover,
+.link:active {
     color: #3d0099;
     text-decoration: none;
 }
