--- a/ecommerce/store/templates/store/favoritos.html
+++ b/ecommerce/store/templates/store/favoritos.html
@@ -3,14 +3,14 @@
 {% block content %}
     <h2>Produtos Favoritos</h2>
     <div class="row">
-        {% for product in favoritos %}
+        {% for favorito in favoritos %}
         <div class="col-lg-4">
-            <img class="thumbnail" src="{{product.imageURL}}" alt="">
+            <img class="thumbnail" src="{{favorito.product.imageURL}}" alt="">
             <div class="box-element product">
-                <h6><strong>{{product.name}}</strong></h6>
+                <h6><strong>{{favorito.product.name}}</strong></h6>
                 <hr>
-                <a class="btn btn-outline-success" href="{% url 'product_detail' product.id %}">Ver</a>
-                <h4 style="display: inline-block; float: right ;"><strong>R${{product.price|floatformat:2}}</strong></h4>
+                <a class="btn btn-outline-success" href="{% url 'product_detail' favorito.product.id %}">Ver</a>
+                <h4 style="display: inline-block; float: right ;"><strong>R${{favorito.product.price|floatformat:2}}</strong></h4>
             </div>
         </div>
         {% endfor %}
