--- a/ecommerce/store/templates/store/product_detail.html
+++ b/ecommerce/store/templates/store/product_detail.html
@@ -64,7 +64,7 @@
                 {% csrf_token %}
                 <input type="hidden" name="product_id" value="{{ product.id }}">
                 <label class="container-heart">
-                    <input type="checkbox" class="favorite-checkbox" onchange="document.getElementById('favoriteForm').submit();" {% if product in favoritos %}checked{% endif %}>
+                    <input type="checkbox" class="favorite-checkbox" onchange="document.getElementById('favoriteForm').submit();" {% if product.id in favoritos_ids %}checked{% endif %}>
                     <svg id="Layer_1" version="1.0" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M16.4,4C14.6,4,13,4.9,12,6.3C11,4.9,9.4,4,7.6,4C4.5,4,2,6.5,2,9.6C2,14,12,22,12,22s10-8,10-12.4C22,6.5,19.5,4,16.4,4z"></path></svg>
                 </label>
             </form>
