--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -23,4 +23,9 @@
       <span class="sr-only">Next</span>
     </a>
   </div>  
+
+    <div class="leaderboard-banner">
+        <img src="{% static 'images/Leaderboard.png' %}" alt="Descrição do banner">
+    </div>
+
 {% endblock content %}
