--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -207,6 +207,8 @@ h6 {
     user-select: none;
     transition: 100ms;
     margin-top: 2%;
+    margin-left: 5%;  
+    margin-right: 5%;
 }
 
 .checkmark {
@@ -450,11 +452,16 @@ header {
 }
 
 .leaderboard-banner img {
-    width: 100%;
-    height: 100px; 
-    object-fit: cover; 
+    width: 119.5%;
+    height: 101px;
+    object-fit: cover;
+    margin-left: 14px;
 }
 
 .leaderboard-banner {
     margin-top: 20px;
+}
+
+.container-fluid {
+    width: 122%;
 }
