--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -1,29 +1,30 @@
 {% extends "store/main.html" %}
 {% load static %}
 {% block content %}
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      {% for image in carousel_images %}
-      <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
-      {% endfor %}
-    </ol>
-    <div class="carousel-inner">
-      {% for image in carousel_images %}
-      <div class="carousel-item {% if forloop.first %}active{% endif %}">
-        <img class="d-block w-100" src="{{ image.image.url }}" alt="{{ image.alt_text }}">
-      </div>
-      {% endfor %}
+<div class="container-fluid mx-0">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+        {% for image in carousel_images %}
+        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
+        {% endfor %}
+        </ol>
+        <div class="carousel-inner">
+        {% for image in carousel_images %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <img class="d-block w-100" src="{{ image.image.url }}" alt="{{ image.alt_text }}">
+        </div>
+        {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>  
-
+</div>  
     <div class="leaderboard-banner">
         <img src="{% static 'images/Leaderboard.png' %}" alt="Descrição do banner">
     </div>
