Resolvendo problema da margem do container no store.html

--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -1,6 +1,12 @@
 {% extends "store/main.html" %}
 {% load static %}
 {% block content %}
+<style>
+    .container{
+        margin-left: 5%;  
+        margin-right: 5%;
+    }
+</style>
 <div class="container-fluid mx-0">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
